--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
+    <!-- Header -->
+    <header>
+        <div class="contenitore-logo">
+            <img class='logo' src="img/Logo.png" alt="logo">
+            <h1 class="titolo">Toboolist</h1>
+        </div>
+    </header>
+    <!-- /Header -->
+    
     <main></main>
 </body>
 </html>
