--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         </div>
     </header>
     <!-- /Header -->
-    
-    <main></main>
+
+    <!-- Main -->
+    <main>
+        <!-- Bottoni -->
+        <div class="bottoni">
+            <button class='bottone-task' type="button">Add Task</button>
+            <button class='bottone-section' type="button">Add Section</button>
+        </div>
+        <!-- /Bottoni -->
+        
+    </main>
+    <!-- /Main -->
 </body>
 </html>
