--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
             <button class='bottone-section' type="button">Add Section</button>
         </div>
         <!-- /Bottoni -->
-        
+
+        <!-- Prima Section -->
+        <section>
+            <h2>New Task</h2>
+
+            <ul>
+                <li id="check" class="editorial"><div class="text">Quarterly Newsletter</div></li>
+            </ul>
+
+        </section>
+        <!-- /Prima Section -->
+        <section></section>
+        <section></section>
     </main>
     <!-- /Main -->
 </body>
