--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
 
         </section>
         <!-- /Prima Section -->
-        <section></section>
+
+        <!-- Seconda Section -->
+        <section>
+            <h2> Today</h2>
+            <ul>
+                <li id="check" class="editorial"><div class="text">Recruiting blog post</div></li>
+                <li id="check" class="q-goals"><div class="text">Mobile app Launch</div></li>
+                <li id="false" class="recruiting"><div class="text">Interview John H.</div></li>
+                <li id="check" class="mobile"><div class="text">Summit update to mobile storefronts</div></li>
+            </ul>
+        </section>
+        <!-- /Seconda Section -->
+        
         <section></section>
     </main>
     <!-- /Main -->
