Terza Section+fix

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <!-- /Bottoni -->
 
         <!-- Prima Section -->
-        <section>
+        <section class="prima-section">
             <h2>New Task</h2>
 
             <ul>
-                <li id="check" class="editorial"><div class="text">Quarterly Newsletter</div></li>
+                <li id="check" class="editorial"><div class="text">Quarterly Newsletter</div><div class="tags editorial">Editorial</div></li>
             </ul>
 
         </section>
@@ -45,15 +45,40 @@
         <section>
             <h2> Today</h2>
             <ul>
-                <li id="check" class="editorial"><div class="text">Recruiting blog post</div></li>
-                <li id="check" class="q-goals"><div class="text">Mobile app Launch</div></li>
-                <li id="false" class="recruiting"><div class="text">Interview John H.</div></li>
-                <li id="check" class="mobile"><div class="text">Summit update to mobile storefronts</div></li>
+                <li id="check" class="editorial">
+                    <div class="text">Recruiting blog post</div>
+                    <div class="tags editorial">Editorial</div></li>
+                <li id="check" class="q-goals">
+                    <div class="text">Mobile app Launch</div>
+                    <div class="tags q-goals">Q1 Goals</div></li>
+                <li id="false" class="recruiting">
+                    <div class="text">Interview John H.</div>
+                    <div class="tags recruiting">Recruiting</div></li>
+                <li id="check" class="mobile">
+                    <div class="text">Summit update to mobile storefronts</div>
+                    <div class="tags mobile">Mobile</div></li>
             </ul>
         </section>
         <!-- /Seconda Section -->
-        
-        <section></section>
+
+        <!-- Terza Section -->
+        <section>
+            <h2>Upcoming</h2>
+            <ul>
+                <li id="false" >
+                    <div class="text">Schedule meeting with Alex</div></li>
+                <li id="check" >
+                    <div class="text">Homepage Refresh</div>
+                    <div class="tags website">Website</div></li>
+                <li id="check" >
+                    <div class="text">Onboard new Sales team members</div>
+                    <div class="tags sales">Sales</div></li>
+                <li id="check" >
+                    <div class="text">Review editorial calendar</div>
+                    <div class="tags editorial">Editorial</div></li>
+            </ul>
+        </section>
+        <!-- /Terza Section -->
     </main>
     <!-- /Main -->
 </body>
