Progetto Completato-Fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <h2>New Task</h2>
 
             <ul>
-                <li id="check" class="editorial"><div class="text">Quarterly Newsletter</div><div class="tags editorial">Editorial</div></li>
+                <li  class="check">
+                    <div class="text">Quarterly Newsletter</div>
+                    <div class="tags editorial">Editorial</div></li>
             </ul>
 
         </section>
@@ -45,16 +47,16 @@
         <section>
             <h2> Today</h2>
             <ul>
-                <li id="check" class="editorial">
+                <li class="check">
                     <div class="text">Recruiting blog post</div>
                     <div class="tags editorial">Editorial</div></li>
-                <li id="check" class="q-goals">
+                <li class="check">
                     <div class="text">Mobile app Launch</div>
                     <div class="tags q-goals">Q1 Goals</div></li>
-                <li id="false" class="recruiting">
+                <li  class="false">
                     <div class="text">Interview John H.</div>
                     <div class="tags recruiting">Recruiting</div></li>
-                <li id="check" class="mobile">
+                <li  class="check">
                     <div class="text">Summit update to mobile storefronts</div>
                     <div class="tags mobile">Mobile</div></li>
             </ul>
@@ -65,15 +67,15 @@
         <section>
             <h2>Upcoming</h2>
             <ul>
-                <li id="false" >
+                <li class="false" >
                     <div class="text">Schedule meeting with Alex</div></li>
-                <li id="check" >
+                <li class="check" >
                     <div class="text">Homepage Refresh</div>
                     <div class="tags website">Website</div></li>
-                <li id="check" >
+                <li class="check"  >
                     <div class="text">Onboard new Sales team members</div>
                     <div class="tags sales">Sales</div></li>
-                <li id="check" >
+                <li class="check" >
                     <div class="text">Review editorial calendar</div>
                     <div class="tags editorial">Editorial</div></li>
             </ul>
