--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- /Prima Section -->
 
         <!-- Seconda Section -->
-        <section>
+        <section class="seconda-section">
             <h2> Today</h2>
             <ul>
                 <li class="check">
@@ -64,7 +64,7 @@
         <!-- /Seconda Section -->
 
         <!-- Terza Section -->
-        <section>
+        <section class="terza-section">
             <h2>Upcoming</h2>
             <ul>
                 <li class="false" >
